--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,36 @@
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN" "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 <web-app id="WebApp_ID">
 	<display-name>Mail app</display-name>
+	<servlet>
+		<servlet-name>getMessage</servlet-name>
+		<display-name>getMessage</display-name>
+		<description></description>
+		<servlet-class>message.getMessage</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>getSentInbox</servlet-name>
+		<display-name>getSentInbox</display-name>
+		<description></description>
+		<servlet-class>message.getSentInbox</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>getMessageServlet</servlet-name>
+		<display-name>getMessageServlet</display-name>
+		<description></description>
+		<servlet-class>message.getMessageServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>getMessage</servlet-name>
+		<url-pattern>/getMessage</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>getSentInbox</servlet-name>
+		<url-pattern>/getSentInbox</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>getMessageServlet</servlet-name>
+		<url-pattern>/getMessageServlet</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
@@ -9,5 +39,6 @@
 		<welcome-file>default.html</welcome-file>
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
+		<welcome-file>login.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
