--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,12 @@
 		<description></description>
 		<servlet-class>message.getTrashInbox</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>logout</servlet-name>
+		<display-name>logout</display-name>
+		<description></description>
+		<servlet-class>creds.logout</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>getMessage</servlet-name>
 		<url-pattern>/getMessage</url-pattern>
@@ -41,6 +47,10 @@
 	<servlet-mapping>
 		<servlet-name>getTrashInbox</servlet-name>
 		<url-pattern>/getTrashInbox</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>logout</servlet-name>
+		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
